fix: allSubtasks container max-height reduction on 96px so there are three subtasks visible

--- a/styles/add-task-subtasks.css
+++ b/styles/add-task-subtasks.css
@@ -156,7 +156,7 @@
 
 .allSubtasks {
   width: 100%;
-  max-height: 186px;
+  max-height: 96px;
   overflow-y: auto;
   display: block;
   list-style: disc;
